samples/_failures_safe/1761625225_a27976_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_592605e8.c: In function ‘main’:
./samples/SAFE/__tmp_592605e8.c:137:44: error: expected ‘)’ at end of input
  137 |         if (src < 0 || src >= nodes || dest
      |            ~                               ^
      |                                            )
./samples/SAFE/__tmp_592605e8.c:137:9: error: expected declaration or statement at end of input
  137 |         if (src < 0 || src >= nodes || dest
      |         ^~
./samples/SAFE/__tmp_592605e8.c:137:9: error: expected declaration or statement at end of input
